# HighFrequencyQuantitativeTrading

./: .env.client.minimal.example  .env.client.usmart.minimal.example  .env.example  .env.usmart.example  .gitignore  pyproject.toml
docs/: 用户手册.md
fixtures/: sample_news_event.json  sample_price_event.json
scripts/: build_windows_exe.ps1  demo_trading_today.ps1  ignite_analysis.ps1  ignite_futu.ps1  ignite_local.ps1  ignite_public_no_key.ps1  ignite_usmart.ps1  mock_llm_server.py  prepare_customer_source.ps1  smoke_futu_order_query.py  smoke_futu_quote.py  smoke_futu_trade.py  stress_local_dummy.ps1
src/hfqt/: __init__.py  app.py  config.py  config_catalog.py  engine.py  owner_control.py  pipeline.py  runtime_logging.py  schemas.py  windows_launcher.py
src/hfqt/agents/: __init__.py  client.py  intel.py  review.py  risk.py
src/hfqt/alpha/: __init__.py  regime_engine.py  signal_engine.py
src/hfqt/analytics/: __init__.py  portfolio.py
src/hfqt/auth/: __init__.py  machine.py  runtime.py  schemas.py
src/hfqt/brokers/: base.py  futu_sim.py  paper_local.py  usmart.py  usmart_client.py
src/hfqt/enrichers/: __init__.py  event_enricher.py
src/hfqt/features/: __init__.py  feature_engine.py  market_features.py  sentiment_features.py
src/hfqt/marketdata/: __init__.py  base.py  futu_quote.py  public_price_action.py  yahoo_chart.py  yfinance_chart.py
src/hfqt/portfolio/: __init__.py  ranking_engine.py  sizing_engine.py  universe_selection.py
src/hfqt/reasoners/: __init__.py  llm.py  mock.py
src/hfqt/risk/: __init__.py  basic.py
src/hfqt/sources/: __init__.py  (+4 more)
(+4 files in other folders)
